--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,23 @@
 *.pyc
 docker/output/*
 *.csv
+*.log
+cutoutbulk.py
+speed_sort.py
+speed_sort_2.py
+plotter_trial.py
+plotter_trial_2.py
+plotter_trial_3.py
+plotter_trial_4.py
+plotter_trial_5.py
+plotter_trial_6.py
+32x267546-16x720395_xs2ys3/
+32x339727-16x486495_xs3ys1/
+32x579913-16x402778_xs3ys1/
+DES0210-1624/
+bright_galaxies_23_objects/
+color_image_test/
+lgelman2/
+tiles_sample/
+multiprocessing_notes.txt
+overview.txt
