--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ plotter_trial_6.py
 32x339727-16x486495_xs3ys1/
 32x579913-16x402778_xs3ys1/
 DES0210-1624/
+DES0212-1707/
 bright_galaxies_23_objects/
 color_image_test/
 lgelman2/
