--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,6 @@ DES0212-1707/
 bright_galaxies_23_objects/
 color_image_test/
 lgelman2/
-tiles_sample/
+tiles/
 multiprocessing_notes.txt
 overview.txt
