--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ plotter_trial_4.py
 plotter_trial_5.py
 plotter_trial_6.py
 bulkthumbs_5_original.py
+lib_functions.py
 32x267546-16x720395_xs2ys3/
 32x339727-16x486495_xs3ys1/
 32x579913-16x402778_xs3ys1/
