--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,15 @@
-32x267546-16x720395_xs2ys3/
-32x339727-16x486495_xs3ys1/
-32x579913-16x402778_xs3ys1/
-bright_galaxies_23_objects/
-color_image_test/
-DES0210-1624/
-DES0212-1707/
+code_trials/
+config/*
 docker/output/*
 galaxy_DES0120-2706_x20.2435_y-27.0297/
-lgelman2/
 output/
-rgbmaker_test/
+plotter_trial/
+rgb_maker/
+speed_sort/
+test/
 tiles/
-bulkcutouts.py
-bulkthumbs_5_original.py
-cutoutbulk.py
-lib_functions.py
-plotter_trial.py
-plotter_trial_2.py
-plotter_trial_3.py
-plotter_trial_4.py
-plotter_trial_5.py
-plotter_trial_6.py
-rgbmaker.py
-rgbmaker_2.py
-speed_sort.py
-speed_sort_2.py
 *.csv
 *.log
 *.pyc
-multiprocessing_notes.txt
-overview.txt
-des-bulk-cutouts.html
+*.xml
+*.yaml
